# CatchWeight

./: .gitignore  ANALYTICS_README.md  ARCHITECTURE_EXPLANATION.md  BDC_Feasibility_Brief.md  BDC_Migration_Plan_Technical.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MONITORING.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  METRICS_EXPLAINED.md  REALISTIC_DATA_GUIDE.md  RENDER_DEPLOYMENT.md  S4_TO_POSTGRES_ARCHITECTURE.md  SETUP_COMPLETE.md  WORKFLOW.md  load_realistic_data.sh  render.yaml  run_migrations.sh  test-api.sh
backend/: .env.example  Procfile  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/scripts/: generate_backfill.py
backend/sql/: 001_schema.sql  002_indexes.sql  003_views.sql  004_seed.sql  004_seed_original_backup.sql  004_seed_realistic.sql  005_ai_schema.sql  006_backfill_historical.sql  007_admin_audit.sql  008_forecasting_views.sql
backend/src/catchweight/: auth.py  db.py  posting.py
backend/src/catchweight/api/: main.py
backend/src/catchweight/api/v1/: admin.py  dataproducts.py  forecasting.py  materials.py  movements.py  reconciliation.py  schema.py  seed.py  stock.py  valuation.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/analytics/: page-new.tsx  page.tsx
frontend/app/back-postings/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: BrandLogo.tsx  DataTable.tsx  Nav.tsx  RelationshipSidebar.tsx  S4RelationshipViewer.tsx  TableCard.tsx
frontend/lib/: api.ts  dashboard-context.tsx
(+14 files in other folders)
